--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 */.DS_Store
-.gradle/
-.idea/
+.gradle/*
+.idea/*
+core/build/*
+core/build.gradle
+desktop/build.gradle
+desktop/build/*
+build.gradle
+gradle.properties
+gradlew
+gradlew.bat
+settings.gradle
